[package]
name = "diesel-example"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["extras", "sqlite"] }
roa = { path = "../../roa", version = "0.5.0-alpha", features = ["router", "body"] }
roa-diesel = { path = "../../roa-diesel", version = "0.5.0-alpha" }
async-std = { version = "1.4", features = ["attributes"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
pretty_env_logger = "0.3"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json", "cookies", "gzip"] }