[package]
name = "diesel-example"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["extras", "sqlite"] }
roa = { path = "../../roa", features = ["router", "body"] }
roa-diesel = { path = "../../roa-diesel" }
tokio = { version = "0.2.13", features = ["rt-threaded", "blocking", "macros"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
pretty_env_logger = "0.3"

[dev-dependencies]
reqwest = { version = "0.10", features = ["json", "cookies", "gzip"] }