[package]
name = "diesel-example"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["full"] }
diesel = { version = "1.4", features = ["extras", "sqlite"] }
roa = { path = "../../roa", features = ["router", "json"] }
roa-diesel = { path = "../../roa-diesel" }
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"] }