[package]
name = "juniper-example"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "1.4"
roa = { path = "../../roa", features = ["router"] }
roa-diesel = { path = "../../roa-diesel" }
roa-juniper = { path = "../../roa-juniper" }
diesel-example = { path = "../diesel-example" }
async-std = { version = "1.10", features = ["attributes"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
juniper = { version = "0.15", default-features = false }
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"