[package]
name = "multipart-example"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roa = { path = "../../roa", features = ["router", "file", "multipart"] }
tokio = { version = "1.15", features = ["full"] }
tracing = "0.1"
futures = "0.3"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
