[package]
name = "websocket-example"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roa = { path = "../../roa", features = ["router", "file", "websocket"] }
async-std = { version = "1.6", features = ["attributes"] }
log = "0.4"
pretty_env_logger = "0.4"
futures = "0.3"
http = "0.2"
slab = "0.4.2"

[dev-dependencies]
async-tungstenite = { version = "0.4", features = ["async-std-runtime"] }
